"Byte.valueOf(byte)" is not pre-Java 5 compatible. Replaced with "new Byte(byte)".